data/derived/fa15/progs/unify/prog2758.ml.out
Characters 304-305:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type
         ('a -> (int * int list) list) -> 'a -> (int * int list) list
       but an expression was expected of type
         ('a -> (int * int list) list) -> 'a -> 'a -> (int * int list) list
       Type (int * int list) list is not compatible with type
         'a -> (int * int list) list 
